--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
       background: #eef4ff;
     }
 
+    .progress-container {
+      margin-top: 1.5rem;
+      width: 100%;
+      max-width: 500px;
+      background: #e4e4e4;
+      border-radius: 10px;
+      overflow: hidden;
+      height: 16px;
+      display: none;
+    }
+    .progress-bar {
+      height: 100%;
+      width: 0%;
+      background: #4f8ef7;
+      transition: width 0.2s ease;
+    }
+
     img.preview {
       max-width: 100%;
       margin-top: 1.5rem;
@@ -67,6 +84,11 @@
   <label for="fileInput" class="upload-label">Choose Image</label>
   <input type="file" id="fileInput" accept="image/*">
   <div id="dropZone">Drop an image here or click "Choose Image"</div>
+
+  <div class="progress-container">
+    <div class="progress-bar" id="progressBar"></div>
+  </div>
+
   <canvas id="canvas" style="display:none;"></canvas>
   <img id="preview" class="preview" alt="Processed Image Preview">
 
@@ -86,59 +108,81 @@
     }
 
     function processImage(file) {
-      const img = new Image();
-      img.onload = function() {
-        const canvas = document.getElementById('canvas');
-        const ctx = canvas.getContext('2d');
-        canvas.width = img.width;
-        canvas.height = img.height;
-        ctx.drawImage(img, 0, 0);
+      const reader = new FileReader();
+      const progressBar = document.getElementById('progressBar');
+      const progressContainer = document.querySelector('.progress-container');
 
-        const edgeSampleSize = 10;
-        const topPixels = ctx.getImageData(0, 0, img.width, edgeSampleSize).data;
-        const bottomPixels = ctx.getImageData(0, img.height - edgeSampleSize, img.width, edgeSampleSize).data;
-        const leftPixels = ctx.getImageData(0, 0, edgeSampleSize, img.height).data;
-        const rightPixels = ctx.getImageData(img.width - edgeSampleSize, 0, edgeSampleSize, img.height).data;
+      progressContainer.style.display = 'block';
+      progressBar.style.width = '0%';
 
-        const topColor = getMedianColor(topPixels);
-        const bottomColor = getMedianColor(bottomPixels);
-        const leftColor = getMedianColor(leftPixels);
-        const rightColor = getMedianColor(rightPixels);
-
-        const avgColor = [
-          Math.round((topColor[0] + bottomColor[0] + leftColor[0] + rightColor[0]) / 4),
-          Math.round((topColor[1] + bottomColor[1] + leftColor[1] + rightColor[1]) / 4),
-          Math.round((topColor[2] + bottomColor[2] + leftColor[2] + rightColor[2]) / 4)
-        ];
-
-        const targetRatio = 13/4;
-        let newWidth = img.width;
-        let newHeight = img.height;
-        if (img.width / img.height < targetRatio) {
-          newWidth = img.height * targetRatio;
-        } else {
-          newHeight = img.width / targetRatio;
+      reader.onprogress = function(e) {
+        if (e.lengthComputable) {
+          const percent = (e.loaded / e.total) * 100;
+          progressBar.style.width = percent.toFixed(0) + '%';
         }
-
-        canvas.width = newWidth;
-        canvas.height = newHeight;
-
-        ctx.fillStyle = `rgb(${avgColor[0]}, ${avgColor[1]}, ${avgColor[2]})`;
-        ctx.fillRect(0, 0, newWidth, newHeight);
-
-        const x = (newWidth - img.width) / 2;
-        const y = (newHeight - img.height) / 2;
-        ctx.drawImage(img, x, y);
-
-        const dataURL = canvas.toDataURL();
-        document.getElementById('preview').src = dataURL;
-
-        const link = document.createElement('a');
-        link.download = 'expanded-image.png';
-        link.href = dataURL;
-        link.click();
       };
-      img.src = URL.createObjectURL(file);
+
+      reader.onload = function(e) {
+        const img = new Image();
+        img.onload = function() {
+          // Artificially jump to 90% before finalizing
+          progressBar.style.width = '90%';
+
+          const canvas = document.getElementById('canvas');
+          const ctx = canvas.getContext('2d');
+          canvas.width = img.width;
+          canvas.height = img.height;
+          ctx.drawImage(img, 0, 0);
+
+          const edgeSampleSize = 10;
+          const topPixels = ctx.getImageData(0, 0, img.width, edgeSampleSize).data;
+          const bottomPixels = ctx.getImageData(0, img.height - edgeSampleSize, img.width, edgeSampleSize).data;
+          const leftPixels = ctx.getImageData(0, 0, edgeSampleSize, img.height).data;
+          const rightPixels = ctx.getImageData(img.width - edgeSampleSize, 0, edgeSampleSize, img.height).data;
+
+          const topColor = getMedianColor(topPixels);
+          const bottomColor = getMedianColor(bottomPixels);
+          const leftColor = getMedianColor(leftPixels);
+          const rightColor = getMedianColor(rightPixels);
+
+          const avgColor = [
+            Math.round((topColor[0] + bottomColor[0] + leftColor[0] + rightColor[0]) / 4),
+            Math.round((topColor[1] + bottomColor[1] + leftColor[1] + rightColor[1]) / 4),
+            Math.round((topColor[2] + bottomColor[2] + leftColor[2] + rightColor[2]) / 4)
+          ];
+
+          const targetRatio = 13/4;
+          let newWidth = img.width;
+          let newHeight = img.height;
+          if (img.width / img.height < targetRatio) {
+            newWidth = img.height * targetRatio;
+          } else {
+            newHeight = img.width / targetRatio;
+          }
+
+          canvas.width = newWidth;
+          canvas.height = newHeight;
+
+          ctx.fillStyle = `rgb(${avgColor[0]}, ${avgColor[1]}, ${avgColor[2]})`;
+          ctx.fillRect(0, 0, newWidth, newHeight);
+
+          const x = (newWidth - img.width) / 2;
+          const y = (newHeight - img.height) / 2;
+          ctx.drawImage(img, x, y);
+
+          const dataURL = canvas.toDataURL();
+          document.getElementById('preview').src = dataURL;
+
+          // Jump to 100% and hide after short delay
+          progressBar.style.width = '100%';
+          setTimeout(() => {
+            progressContainer.style.display = 'none';
+          }, 400);
+        };
+        img.src = e.target.result;
+      };
+
+      reader.readAsDataURL(file);
     }
 
     document.getElementById('fileInput').addEventListener('change', e => {
